--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                             push()
                         </label>
                     </div>
+                    <div class="form-check my2 text-white-50">
+                        <label class="form-check-label">
+                            <input type="radio" name="inputQuestion1" value="D">
+                            some()
+                        </label>
+                    </div>
                 </div>
 
                 <div class="my-5">
@@ -77,19 +83,25 @@
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion2" value="A" checked>
-                            some()
+                            indexOf( )
                         </label>
                     </div>
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion2" value="B">
-                            setAttribute.remove()
+                            setAttribute.remove( )
                         </label>
                     </div>
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion2" value="C">
-                            pop()
+                            some( )
+                        </label>
+                    </div>
+                    <div class="form-check my-2 text-white-50">
+                        <label class="form-check-label">
+                            <input type="radio" name="inputQuestion2" value="D">
+                            pop( )
                         </label>
                     </div>
                 </div>
@@ -100,19 +112,25 @@
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion3" value="A" checked>
-                            concat()
+                            concat( )
                         </label>
                     </div>
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion3" value="B">
-                            join()
+                            join( )
                         </label>
                     </div>
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion3" value="C">
-                            includes()
+                            includes( )
+                        </label>
+                    </div>
+                    <div class="form-check my-2 text-white-50">
+                        <label class="form-check-label">
+                            <input type="radio" name="inputQuestion3" value="D">
+                            concat( )
                         </label>
                     </div>
                 </div>
@@ -129,13 +147,19 @@
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion4" value="B">
-                            undefined
+                            string
                         </label>
                     </div>
                     <div class="form-check my-2 text-white-50">
                         <label class="form-check-label">
                             <input type="radio" name="inputQuestion4" value="C">
-                            string 
+                            undefined 
+                        </label>
+                    </div>
+                    <div class="form-check my-2 text-white-50">
+                        <label class="form-check-label">
+                            <input type="radio" name="inputQuestion4" value="C">
+                            boolean
                         </label>
                     </div>
                 </div>
